--- a/trino/iceberg.properties
+++ b/trino/iceberg.properties
@@ -4,8 +4,10 @@ iceberg.nessie-catalog.default-warehouse-dir=s3://lakehouse/
 iceberg.nessie-catalog.uri=http://nessie:19120/api/v1
 iceberg.nessie-catalog.ref=main
 iceberg.file-format=PARQUET
+# S3 Configuration for Iceberg
 fs.native-s3.enabled=true
 s3.endpoint=http://minio:9000
+s3.region=eu-west-1
 s3.path-style-access=true
-s3.aws-access-key=${MINIO_ROOT_USER}
-s3.aws-secret-key=${MINIO_ROOT_PASSWORD}
+s3.aws-access-key=minio
+s3.aws-secret-key=minio123
