--- a/spark/spark-defaults.conf
+++ b/spark/spark-defaults.conf
@@ -8,6 +8,17 @@ spark.sql.catalog.lakehouse.s3.access-key=minio
 spark.sql.catalog.lakehouse.s3.secret-key=minio123
 spark.sql.catalog.lakehouse.s3.path-style-access=true
 
+
+spark.sql.catalog.retail=org.apache.iceberg.spark.SparkCatalog
+#spark.sql.catalog.retail.catalog-impl=org.apache.iceberg.nessie.NessieCatalog
+spark.sql.catalog.retail.type=nessie
+spark.sql.catalog.retail.uri=http://nessie:19120/api/v1
+spark.sql.catalog.retail.warehouse=s3a://retail-lakehouse/
+spark.sql.catalog.retail.s3.endpoint=http://minio:9000
+spark.sql.catalog.retail.s3.access-key=minio
+spark.sql.catalog.retail.s3.secret-key=minio123
+spark.sql.catalog.retail.s3.path-style-access=true
+
 # S3A (MinIO) général
 spark.hadoop.fs.s3a.access.key=minio
 spark.hadoop.fs.s3a.secret.key=minio123
