--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,27 +79,25 @@ services:
   # Spark Master
   # ===============================
   spark-master:
-    build:
-      context: ./spark
-      dockerfile: Dockerfile.spark
+    #build:
+        #context: ./spark
+        #dockerfile: Dockerfile.spark
+    image: rmeftah/spark-iceberg:3.5.7-1.10.0
     container_name: spark-master
     ports:
       - "9090:9090"  # Spark WebUI
       - "7077:7077"  # Port Master
       - "8888:8888"  # Jupyter Notebook
+      - "10001:10001" #Thrift Server
     depends_on:
       - nessie  # Spark doit voir Nessie pour le catalog Iceberg
       - minio   # Spark doit voir MinIO pour S3
     volumes:
-      - ./notebooks:/home/jupyter/work  # Dossier local pour les notebooks
+      - ./notebooks:/home/iceberg/notebooks/notebooks # Dossier local pour les notebooks
     networks:
       iceberg_net:
         aliases:
           - spark-master
-    environment:
-      SPARK_MODE: master
-      SPARK_MASTER_WEBUI_PORT: 9090
-      SPARK_MASTER_HOST: 0.0.0.0
 
   # ===============================
   # Nessie : versioning / catalog Iceberg
