--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -79,25 +79,40 @@ services:
   # Spark Master
   # ===============================
   spark-master:
-    #build:
-        #context: ./spark
-        #dockerfile: Dockerfile.spark
     image: rmeftah/spark-iceberg:3.5.7-1.10.0
     container_name: spark-master
     ports:
-      - "9090:9090"  # Spark WebUI
       - "7077:7077"  # Port Master
       - "8888:8888"  # Jupyter Notebook
       - "10001:10001" #Thrift Server
+      - "8080:8080" # Spark WebUI
+      - "4040:4040"
     depends_on:
       - nessie  # Spark doit voir Nessie pour le catalog Iceberg
       - minio   # Spark doit voir MinIO pour S3
     volumes:
-      - ./notebooks:/home/iceberg/notebooks/notebooks # Dossier local pour les notebooks
+      - ./notebooks:/home/iceberg/notebooks/notebooks  # Dossier local pour les notebooks
+    environment:
+      - AWS_ACCESS_KEY_ID=minio
+      - AWS_SECRET_ACCESS_KEY=minio123
+      - AWS_REGION=us-east-1
+      - SPARK_MODE=master
     networks:
       iceberg_net:
         aliases:
           - spark-master
+    command: >
+      /bin/bash -c "
+        start-master.sh -p 7077 &
+        start-history-server.sh &
+        start-thriftserver.sh --driver-java-options '-Dderby.system.home=/tmp/derby' &
+        notebook  # ← lance Jupyter après les services Spark
+      "
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 30s
+      timeout: 60s
+      retries: 3
 
   # ===============================
   # Nessie : versioning / catalog Iceberg
