--- a/spark/Dockerfile.spark
+++ b/spark/Dockerfile.spark
@@ -85,11 +85,10 @@ ENV PATH="/opt/spark/sbin:/opt/spark/bin:${PATH}"
 RUN chmod u+x /opt/spark/sbin/* && \
     chmod u+x /opt/spark/bin/*
 
-
 COPY entrypoint.sh .
 RUN chmod u+x entrypoint.sh
 
-ENTRYPOINT ["./entrypoint.sh"]
+#ENTRYPOINT ["./entrypoint.sh"]
 CMD ["notebook"]
 
 # Exposer le port Spark
